# HATman

./: .gitignore  IRPRuleProcessor.java  README.md  Text.docx  client.py  echoserv.py  hatman.py  hatman.py.orig  notes.txt  pacman.py  parse.py  protocol.txt  server.py  startscreen.py  thanks.py
ProjektMana/: Projekthandbuch_HATman.docx  StandardPHBv27_deutsch-v2.docx
ariannexp/: AUTHORS  Makefile.am  README  acinclude.m4  ariannexp.sln  autogen.sh  configure.in
ariannexp/libClient/: Attributes.cpp  Attributes.h  C2SMessages.cpp  C2SMessages.h  Makefile.am  Message.cpp  Message.h  MessageFactory.cpp  MessageFactory.h  NetworkClientManager.cpp  NetworkClientManager.h  RPAction.cpp  RPAction.h  RPObject.cpp  RPObject.h  RPSlot.cpp  RPSlot.h  S2CMessages.cpp  S2CMessages.h  Serializer.cpp  Serializer.h  Trace.cpp  Trace.h  libClient.vcproj
ariannexp/libClient/CVS/: Entries  Repository
ariannexp/libFramework/: API Description.txt  Makefile.am  arianne.i  chatClient.py  chatClient.py.bak  libFramework.cpp  libFramework.h  libFramework.vcproj  test.py  test.py.bak
ariannexp/libFramework/CVS/: Entries  Repository
ariannexp/libFramework/pyarianne/: Makefile.am  README.txt  __init__.py  perceptionHandler.py
ariannexp/libFramework/pyarianne/CVS/: Entries  Repository
ariannexp/testLibClient/: Makefile.am  Test_Attributes.cpp  Test_Attributes.h  Test_Messages.cpp  Test_Messages.h  Test_NetworkClientManager.cpp  Test_NetworkClientManager.h  Test_RPObject.cpp  Test_RPObject.h  Test_RPSlot.cpp  Test_RPSlot.h  Test_Serializer.cpp  Test_Serializer.h  main.cpp  testLibClient.vcproj
ariannexp/testLibClient/CVS/: Entries  Repository
ariannexp/testLibGladiator/: Makefile.am  Test_LibGladiator.cpp  Test_LibGladiator.h  main.cpp  testLibGladiator.vcproj
ariannexp/testLibGladiator/CVS/: Entries  Repository  Root
dontpanic/: client.py  server.py
example/: thanks.py
helper/: client.py  hatmanMain.py  node.py  parse.py
images/: pacman1.xcf
layers/: char.py  ghost.py  lab.py  pacman.py
marauroa/: Rule.java  World.java  server.ini
marauroa2/: .project  marauroa.ini  server_stats.xml
ppt_is_boring/: ppt_is_boring.py
projectwork/: FinalPresentation.pptx  Kirchmaier_Bergmann_Halmschlager_Assignment.txt  Plakat.pptx  (+3 more)
(+565 files in other folders)
