noinst_LTLIBRARIES = libClient.la
AM_CXXFLAGS= $(SDL_CFLAGS)

libClient_la_SOURCES = \
	Attributes.cpp \
	Attributes.h \
	C2SMessages.cpp \
	C2SMessages.h \
	Message.cpp \
	Message.h \
	MessageFactory.cpp \
	MessageFactory.h \
	NetworkClientManager.cpp \
	NetworkClientManager.h \
	RPAction.cpp \
	RPAction.h \
	RPObject.cpp \
	RPObject.h \
	RPSlot.cpp \
	RPSlot.h \
	S2CMessages.cpp \
	S2CMessages.h \
	Serializer.cpp \
	Serializer.h \
	Trace.cpp \
	Trace.h


